<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LanzaActividad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_lanza_actividad_view_name_text" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/surenamesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_lanza_actividad_view_surenames_text" />

        <EditText
            android:id="@+id/surenamesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_lanza_actividad_view_age_text" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_lanza_actividad_view_phone_text" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/drivingLicenseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_lanza_actividad_view_driving_license_text" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/englishLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_lanza_actividad_view_english_level_text" />

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/lowLevelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_lanza_actividad_view_low_level_text" />
                <RadioButton
                    android:id="@+id/mediumLevelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_lanza_actividad_view_medium_level_text" />
                <RadioButton
                    android:id="@+id/highLevelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_lanza_actividad_view_high_level_text" />
            </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registryDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_lanza_actividad_view_registry_date_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/changeDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="changeDate"
            android:layout_marginRight="7dp"
            android:text="@string/activity_lanza_actividad_view_change_date_button_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="savePerson"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:text="@string/activity_lanza_actividad_view_save_button_text" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="resetPerson"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:text="@string/activity_lanza_actividad_view_reset_button_text" />

        <Button
            android:id="@+id/exitActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:text="@string/activity_lanza_actividad_view_cancel_button_text" />
    </LinearLayout>

</LinearLayout>